--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faux-cv-website",
+  "name": "faux-cv-landing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "geist": "^1.3.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.13.11",
+    "typescript": "5.8.2"
   }
 }
