--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "geist": "^1.3.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "marked": "^12.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.2",
     "@types/node": "22.13.11",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "typescript": "5.8.2"
   }
 }
